# zkWasm-Rust-Demo

./: Cargo.toml  rust-toolchain.toml  test.js
src/: lib.rs  lib_copy.rs  libs_copy.rs
