[package]
name = "zkwasm-rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
rlp = { version = "0.5.2", default-features = false }
bytes = "1.4.0"
wasm-bindgen = "0.2.83"
reth-rlp = { git = "https://github.com/paradigmxyz/reth", rev="v0.1.0-alpha.8", features = [
    "derive",
    "std",
    "ethnum",
    "ethereum-types",
    "smol_str",
]}
quote = "1.0.33"
c-kzg = { version = "0.1.0", default-features = false }
clang = "2.0.0"
clang-sys = "1.6.1"