[package]
name = "zkwasm-rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
rlp = { version = "0.5.2", default-features = false }
wasm-bindgen = "0.2.83"
quote = "1.0.33"
alloy-rlp = "0.3.2"
alloy-rlp-derive = "0.3.2"
arrayvec = "0.7"
bytes = "1.4.0"
smol_str = "0.2"
mimc-rs = { git = "https://github.com/arnaucube/mimc-rs.git" }
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
